   ARPResponder, FromLinux, LookupIPRoute, LookupIPRoute2, and RIPSend
   elements in your configuration files.

** Deprecated FromBPF and ToBPF in favor of FromDevice and ToDevice. (But
   the arguments to FromDevice and ToDevice are the same as FromBPF and
   ToBPF.)

** Renamed the SetIPAddress element to StoreIPAddress. Added a different
   SetIPAddress element.

* Incompatible C++ API changes

** Reorganized Linux kernel polling patches. If you have a previous version
   of Click, you must unapply the old kernel patch and apply the new kernel
   patch before compiling.

** Improved Packet copy-on-write behavior by reflecting it in the C++ class
   structure. Now there is a class for possibly-shared packets (named
   Packet), and a class for definitely-not-shared packets (named
   WritablePacket). WritablePacket is a subclass of Packet. Packet's data
   is always read-only (that is, the `data()' method returns a `const
   unsigned char *', and so forth). WritablePacket's data is read/write
   (the `data()' method returns an `unsigned char *').
   `Packet::uniqueify()' and similar methods return a WritablePacket.

** Made configuration argument parsing more uniform among elements. For
   example, every configuration argument is always a comma-separated
   string. This is enforced by passing a vector of strings to the
   `configure' method: `cp_argvec' is called before the `configure' method
   is called. Changed Element method `int configure(const String &,
   ErrorHandler *)' to `int configure(const Vector<String> &, ErrorHandler
   *)', and updated elements.

** The `cp_DATATYPE' functions take pointers instead of references. This
   makes using them much clearer.

** Changed Element method `bool configure_first() const' to `int
   configure_phase() const'. Now element classes can specify their relative
   configuration and initialization order; for example, ToDevice specifies
   that it should be configured and initialized after any FromDevices.
