@@ -152,7 +152,7 @@ ELEMENTS_ARG_ENABLE(ethernet, [include Ethernet elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(ip, [include IP, UDP, and TCP elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(app, [include application-level elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(etherswitch, [include Ethernet switch elements (on by default)], yes)
-ELEMENTS_ARG_ENABLE(ipsec, [include IP security elements], no)
+dnl ELEMENTS_ARG_ENABLE(ipsec, [include IP security elements], no)
 ELEMENTS_ARG_ENABLE(radio, [include radio elements], no)
 ELEMENTS_ARG_ENABLE(local, [include local elements], no)
 ELEMENTS_ARG_ENABLE(grid, [include Grid elements], no)
