@@ -83,17 +83,9 @@ IPEncap::simple_action(Packet *p_in)
   ip->ip_p = _ip_p;
   ip->ip_src = _ip_src;
   ip->ip_dst = _ip_dst;
-
-  if (p->ip_ttl_anno()) {
-    ip->ip_tos = p->ip_tos_anno();
-    /* We want to preserve the DF flag if set */
-    ip->ip_off = htons(p->ip_off_anno() & IP_RF);
-    ip->ip_ttl = p->ip_ttl_anno();
-  } else {
-    ip->ip_tos = 0;
-    ip->ip_off = 0;
-    ip->ip_ttl = 250; //rtm
-  }
+  ip->ip_tos = 0;
+  ip->ip_off = 0;
+  ip->ip_ttl = 250;
 
   ip->ip_sum = 0;
 #ifdef __KERNEL__
